nya sajtens struktur färdig för header, navi och footer, fast footer har inget innehåll ännu

--- a/index.html
+++ b/index.html
@@ -2,28 +2,15 @@
 layout: default
 ---
 <a name="page-top" id="page-top"></a>
-<section class="bild-top py-3">
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-md-7 offset-md-1 col-sm-12 hero">
-                <h1 class="heroheader text-center text-sm-left">Huden är ditt största organ <br>skäm bort och skydda den</h1>
-                <p class="text-center text-sm-left">Dr Hardman's färska, närproducerade och helt naturliga produkter ger dig de renaste ingredienserna, speciellt utvalda för sina helande egenskaper, utan extra kemikalie­belastning. Ge din hud ren mat!</p>
 
-                <p class="text-center text-sm-left"><a class="button" target="_blank" href="https://arenan.yle.fi/1-4261190">Lyssna i Radio Vega!</a></p>
-            </div>
-            <div class="col-md-3 col-sm-12 hidden-xs-down">
-                <!--<img class="img-fluid heroimg mx-auto " src="/img/bakgrund2.png" alt="Dr Hardmans ekologiska närproducerade hudvårdsprodukter blomma"/>-->
-            </div>
-
-        </div>
-    </div>
+<section class="padding">
+                <h1 class="heroheader">Huden är ditt största organ <br>skäm bort och skydda den</h1>
+                <p class="">Dr Hardman's färska, närproducerade och helt naturliga produkter ger dig de renaste ingredienserna, speciellt utvalda för sina helande egenskaper, utan extra kemikalie­belastning. Ge din hud ren mat!</p>
+                <a class="button" target="_blank" href="https://arenan.yle.fi/1-4261190">Lyssna i Radio Vega!</a>
 </section>
 
 <a name="jumtarget" id="page-produkter"></a>
-<section class="dubbelpadding slick-wrapper white">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-10 offset-md-1 col-sm-10 offset-sm-1 col-xs-10 offset-xs-1">
+<section class="padding slick-wrapper">
                 <h1 class="slick-slider__title text-center">Produkter</h1>
                 <div class="slick-slider">
                     <div class="slick-slider__item produkter">
@@ -332,19 +319,14 @@ layout: default
                             </div>
                         </a>
                     </div>-->
-                </div>
-           </div><!--main col-12-->
-        </div> <!--main row -->
-    </div><!--container -->
+                </div><!--//slick_slider//-->
+
 </section>
 
 <section class="dubbelpadding">
-    <div class="container">
-        <div class="row text-center">
+        <div class="text-center">
             <a class="" name="page-buy" id="page-buy"></a>
-            <div class="col-md-8 offset-md-2">
-                <img class="img-fluid mx-auto" src="/img/creme.jpg" alt="Dr Hardman buy at Reko">
-                <div class="buy-box">
+
                     <h1 class="faktarutarubrik">Du kan köpa Dr Hardman's produkter på REKO i Salo, Ekenäs, Karis, Ingå, Esbo, Grankulla och Helsingfors!</h1>
                     <p>Gå till Facebook-gruppen (sluten) via länkarna nedan, och begär om medlemskap!
                     <br>Handla i <a target="_blank" href="https://www.facebook.com/groups/850867654971390/">Salo</a>,
@@ -396,37 +378,21 @@ layout: default
                         <p>Beställ senast <span class="orange">dagen före utdelning kl 21.00</span> tack! Beställningar på FB Reko eller email till <a href="mailto:lotta.hardman@gmail.com">lotta.hardman@gmail.com</a></p>
                         <p>För att handla på andra tider: Ring/texta Lotta Hardman 0407642085 (kvällar) eller skicka din beställning på <a href="mailto:lotta.hardman@gmail.com">lotta.hardman@gmail.com</a> och kom överens om avhämtning från Ekenäs eller postning (inc. avgifter och nätbetalning).</p>
                 </div>
-            </div>
-        </div> <!--main col-8-->
-    </div>
+
 </section>
 
 
-<section class="light-bg dubbelpadding">
-   <div class="texture-border-top">
-    </div>
-    <div class="container">
-        <div class="row text-center">
-            <div class="col-md-10 offset-md-1">
+<section class="padding text-center">
+
                 <h1 class="faktarutarubrik">Färskt<br>närpr&shy;oducerat och <br>100% naturligt!</h1>
                 <p style="font-size:21px">Genom närproduktion och användning av färska ekologiska oraffinerade råvaror som framställts rättvist och i harmoni med naturen, kan Dr Hardmans hudkrämer vara av högsta kvalitet utan att innehålla konserveringsmedel eller andra tillsatsämnen. <br>Huden är kroppens största organ vars syfte är att avgifta kroppen och skydda vårt inre; muskler, blod och övriga organ mot främmande ämnen. Ge den ren mat!
-                    <br><a style="font-size:21px" target="_blank" href="/braattveta">Läs bra att veta <span>&raquo;</span></a></p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-8 offset-md-2 col-sm-10 offset-sm-1 col-xs-12">
-                <img class="img-fluid mx-auto cert" src="/img/badges_all.png" alt="shea-palm-coconut oil badge">
-            </div>
-        </div>
-        <div class="row text-center" style="margin-top:40px">
-            <div class="col-md-10 offset-md-1">
+
+                <img class="img-fluid cert" src="/img/badges_all.png" alt="shea-palm-coconut oil badge">
+
                 <p style="font-size:21px">I årtionden har vi, konsumenterna, fått höra att de skönhetsprodukter vi använder ska vara oljefria, -näst intill fettfria. Vi har skalat bort hudens naturliga fetter med kraftiga tensider och syror, resultatet är att de flesta kvinnor nu lider av känslig hy. Vår hud har blivit så försvarslös att den inte längre kan motstå omgivningens påfrestningar. En ansiktsolja eller fet hudkräm kanske inte är det ultimata universalmedlet för att lösa alla dina hudproblem, men Dr Hardman's produkter kommer definitivt att återställa din huds barriärfunktioner, minska hudirritation och befrämja en hälsosam lyster.</p>
                     <p style="font-size:21px">Anledningen till uppsvinget av naturlig och ekologisk hudvård på senare tid är bl.a. uppmärksamhet i media om hur traditionella hudvårdsprodukter och kosmetika innehåller ämnen som är direkt dåliga för kroppen. Ämnen som kan vara allergiframkallande, hormonstörande och cancerframkallande.
                         <br>En del giftiga ämnen filtreras naturligt i det yttersta hudlagret, andra går djupare ner och kommer i kontakt med blodomloppet. Bra skönhetsprodukter bör alltså innehålla ingredienser som du i princip ska kunna stoppa i munnen och svälja och som kroppen utan problem kan bryta ned.</p>
                 <p style="font-size:21px">De enklaste ingredienserna ger den djupaste skönheten!</p>
-            </div>
-        </div>
-    </div>
 
 
 </section>
