--- a/pitstopregular.html
+++ b/pitstopregular.html
@@ -5,30 +5,16 @@ title: Pit Stop Regular
 comments: true
 ---
 
-<section class="padding">
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-4 offset-lg-1">
+<section class="padding black">
                 <img class="img-fluid mx-auto produktprofilbild" src="/img/DrHardmansPitStop.png">
-            </div>
-            <div class="col-lg-6">
-                <h1 class="pt-3">No 10 PIT STOP REGULAR DEODORANT</h1>
+
+                <h1 class="">No 10 PIT STOP REGULAR DEODORANT</h1>
                 <h3>En soda-baserad doftfri aluminiumfri naturlig deodorantpasta<br>Burk med skruvlock, 50 ml.</h3>
                 <h1 class="pris">12,00 € *</h1>
                 <p class="small">* Rekopris. I Sverige 120 kr.</p>
-            </div>
-        </div>
-    </div>
-</section>
 
-<section class="light-bg">
-    <div class="texture-border-top">
-    </div>
-    <div class="container pt-5 pb-4">
-        <div class="row">
 
-            <div class="col-lg-4 offset-lg-1 pb-3">
-                <div class="faktaruta">
+
                     <h1 class="faktarutarubrik">Snabb&shy;fakta</h1>
 
                     <h4>BRA FÖR:</h4>
@@ -59,10 +45,7 @@ comments: true
                         <br><sup>◆</sup> Oraffinerad (raw) råvara
                     </p>
 
-                </div>
-            </div>
 
-            <div class="col-lg-6">
                 <h1>Om denhär produkten:</h1>
                 <hr class="primary" />
                 <p>Dr Hardmans naturliga deodorantpasta är baserad på soda och aktivt kol och innehåller inga aluminiumsalter eller andra ämnen som täpper till porerna. Porernas uppgift är att andas ut slagg och orenheter som det är meningen att kroppen ska göra sig av med - med porerna tilltäppta stannar även kroppens egna orenheter kvar och orsakar irritationer. Deodoranten säljs i en burk och pastan tas med en spatel ur burken och en mängd stor som en liten ärta breds ut i armhålan. Vill man ha mer effekt väntar man en stund till pastan sugit in och torkat, och upprepar sedan behandlingen. Vänta några minuter innan påklädning. Pastan är basisk och kan svida på nyrakad hud.
@@ -82,8 +65,4 @@ comments: true
                 </div>
                 <a class="up pull-right" href="#page-top"><i class="fa fa-angle-double-up" aria-hidden="true"></i> Upp</a>
 
-            </div>
-        </div>
-    </div>
-    <div class="texture-border-bottom"></div>
 </section>
