snow och annat smått

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@ layout: default
 ---
 <a name="page-top" id="page-top"></a>
 
-<section class="padding">
-                <h1 class="heroheader">Huden är ditt största organ <br>skäm bort och skydda den</h1>
-                <p class="">Dr Hardman's färska, närproducerade och helt naturliga produkter ger dig de renaste ingredienserna, speciellt utvalda för sina helande egenskaper, utan extra kemikalie­belastning. Ge din hud ren mat!</p>
-                <a class="button" target="_blank" href="https://arenan.yle.fi/1-4261190">Lyssna i Radio Vega!</a>
+<section class="hero">
+    <h1 class="heroheader">Huden är ditt största organ skäm bort och skydda den</h1>
+    <p class="herop text-center">Dr Hardman's färska, närproducerade och helt naturliga produkter ger dig de renaste ingredienserna, speciellt utvalda för sina helande egenskaper, utan extra kemikalie­belastning. Ge din hud ren mat!</p>
+    <p class="herop text-center"><a class="button" target="_blank" href="https://arenan.yle.fi/1-4261190">Lyssna i Radio Vega!</a></p>
 </section>
 
 <a name="jumtarget" id="page-produkter"></a>
@@ -323,7 +323,7 @@ layout: default
 
 </section>
 
-<section class="dubbelpadding">
+<section class="dubbelpadding black08">
         <div class="text-center">
             <a class="" name="page-buy" id="page-buy"></a>
 
@@ -382,7 +382,7 @@ layout: default
 </section>
 
 
-<section class="padding text-center">
+<section class="padding text-center black08">
 
                 <h1 class="faktarutarubrik">Färskt<br>närpr&shy;oducerat och <br>100% naturligt!</h1>
                 <p style="font-size:21px">Genom närproduktion och användning av färska ekologiska oraffinerade råvaror som framställts rättvist och i harmoni med naturen, kan Dr Hardmans hudkrämer vara av högsta kvalitet utan att innehålla konserveringsmedel eller andra tillsatsämnen. <br>Huden är kroppens största organ vars syfte är att avgifta kroppen och skydda vårt inre; muskler, blod och övriga organ mot främmande ämnen. Ge den ren mat!
