--- a/pitstopregular.html
+++ b/pitstopregular.html
@@ -4,9 +4,12 @@ type: produkter
 title: Pit Stop Regular
 comments: true
 ---
+<section class="dubbelpadding sloganbox" id="sloganbox10">
+    <header><h1 class="slogan text-center">Ren svett luktar inte!</h1></header>
 
-<section class="padding black">
-                <img class="img-fluid mx-auto produktprofilbild" src="/img/DrHardmansPitStop.png">
+</section>
+<article class="padding grey">
+                <img class="img-fluid produktprofilbild" src="/img/DrHardmansPitStop.png">
 
                 <h1 class="">No 10 PIT STOP REGULAR DEODORANT</h1>
                 <h3>En soda-baserad doftfri aluminiumfri naturlig deodorantpasta<br>Burk med skruvlock, 50 ml.</h3>
@@ -65,4 +68,4 @@ comments: true
                 </div>
                 <a class="up pull-right" href="#page-top"><i class="fa fa-angle-double-up" aria-hidden="true"></i> Upp</a>
 
-</section>
+</article>
