working front page for header footer mobile myös

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
 
 <a name="jumtarget" id="page-produkter"></a>
 
-<h1 class="text-center">Produkter</h1>
+<header><h1 class="text-center">Produkter</h1></header>
 
 <section class="produktkort">
     <div class="flip-card">
