--- a/pitstopregular.html
+++ b/pitstopregular.html
@@ -58,12 +58,4 @@ comments: true
                     <br><a href="/pawsandclawslavender">No 48 Paws and Claws hand och fotkräm med doft av lavendel och ylang ylang</a>
                     <br><a href="/pawsandclawsvanilla">No 48 Paws and Claws vanilj- och apelsindoftande hand- och fotkräm</a>
                 </p>
-                <div
-                        class="fb-like"
-                        data-share="true"
-                        data-width="450"
-                        data-show-faces="true">
-                </div>
-                <a class="up pull-right" href="#page-top"><i class="fa fa-angle-double-up" aria-hidden="true"></i> Upp</a>
-
-</article>
+<article>
