nya bakgrundsbilder + lite stilar till page article

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+id: page-1
 ---
 <a name="page-top" id="page-top"></a>
 
@@ -137,7 +138,7 @@ layout: default
                 <p>Age Defence <br>Cream</p>
             </div>
             <div class="flip-card-back">
-                <a href="/agedefence">
+                <a href="/no44-age-defence">
                     <img  class="img-fluid mx-auto pb-3" src="/img/DrHardmans_No44_Age_Defence_Cream.png" alt="Dr Hardman No.44 Age Defence Face Cream">
                 </a>
             </div>
