--- a/pitstopregular.html
+++ b/pitstopregular.html
@@ -3,14 +3,15 @@ layout: page
 type: produkter
 title: Pit Stop Regular
 comments: true
+id: page-10
 ---
 <section class="dubbelpadding sloganbox" id="sloganbox10">
-    <header><h1 class="slogan text-center">Ren svett luktar inte!</h1></header>
+    <h1 class="slogan text-center">It won't sting!!!</h1>
 
 </section>
 <article class="padding grey">
-    <h1 class="">No 10 PIT STOP REGULAR DEODORANT</h1>
-    <h3>En soda-baserad doftfri aluminiumfri naturlig deodorantpasta<br>Burk med skruvlock, 50 ml.</h3>
+    <header><h1 class="">No 10 PIT STOP REGULAR DEODORANT</h1></header>
+    <p>En soda-baserad doftfri aluminiumfri naturlig deodorantpasta<br>Burk med skruvlock, 50 ml.</p>
     <h1 class="pris">12,00 € *</h1>
     <p class="small">* Rekopris. I Sverige 120 kr.</p>
     <img class="img-fluid produktprofilbild" src="/img/DrHardmansPitStop.png">
@@ -58,4 +59,3 @@ comments: true
                     <br><a href="/pawsandclawslavender">No 48 Paws and Claws hand och fotkräm med doft av lavendel och ylang ylang</a>
                     <br><a href="/pawsandclawsvanilla">No 48 Paws and Claws vanilj- och apelsindoftande hand- och fotkräm</a>
                 </p>
-<article>
