--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ id: page-1
 <a name="page-top" id="page-top"></a>
 
 <section class="dubbelpadding sloganbox" id="sloganboxindex">
-    <header><h1 class="slogan text-center">Huden är ditt största organ<br>skäm bort och skydda den</h1></header>
+    <h1 class="slogan text-center">Huden är ditt största organ<br>skäm bort och skydda den</h1>
 </section>
 
 <a name="jumtarget" id="page-produkter"></a>
