--- a/pitstopregular.html
+++ b/pitstopregular.html
@@ -17,9 +17,9 @@ id: page-10
     <img class="img-fluid produktprofilbild" src="/img/DrHardmansPitStop.png">
 
 
-                    <h1 class="faktarutarubrik">Snabb&shy;fakta</h1>
+                    <h2 class="faktarutarubrik">Snabb&shy;fakta</h2>
 
-                    <h4>BRA FÖR:</h4>
+                    <h3>BRA FÖR:</h3>
                     <ul class="ingredienslista">
                         <li>Dämpad svettlukt</li>
                         <li>Torrare armhålor</li>
@@ -29,31 +29,24 @@ id: page-10
                         <li>inga tillsatta doftoljor</li>
 
                     </ul>
-                    <h4>INGREDIENSER:</h4>
-                    <p>
-                        <a href="/ingredienser">växtbaserat glycerin°</a>
-                        <a href="/ingredienser">majsstärkelse°</a>
-                        <a href="/ingredienser">potatisstärkelse°</a>
-                        <a href="/ingredienser">sheasmör°*<sup>◆</sup></a>
-                        <a href="/ingredienser">natriumbikarbonat(soda),</a>
-                        <a href="/ingredienser">kaolin,</a>
-                        <a href="/ingredienser">zinkoxid,</a>
-                        <a href="/ingredienser">bivax°</a>
-                        <a href="/ingredienser/">aktivt kol</a>
+                    <h3>INGREDIENSER</h3>
+                    <p class="ingredienser">
+                        växtbaserat glycerin° majsstärkelse° potatisstärkelse° sheasmör°*<sup>◆</sup>
+                        natriumbikarbonat(soda), kaolin, zinkoxid, bivax° aktivt kol
                     </p>
 
-                    <p>° Ekologisk
+                    <p class="small">° Ekologisk
                         <br>* Rättvis handel
                         <br><sup>◆</sup> Oraffinerad (raw) råvara
                     </p>
 
 
-                <h1>Om denhär produkten:</h1>
+                <h2>Om denhär produkten</h2>
                 <hr class="primary" />
                 <p>Dr Hardmans naturliga deodorantpasta är baserad på soda och aktivt kol och innehåller inga aluminiumsalter eller andra ämnen som täpper till porerna. Porernas uppgift är att andas ut slagg och orenheter som det är meningen att kroppen ska göra sig av med - med porerna tilltäppta stannar även kroppens egna orenheter kvar och orsakar irritationer. Deodoranten säljs i en burk och pastan tas med en spatel ur burken och en mängd stor som en liten ärta breds ut i armhålan. Vill man ha mer effekt väntar man en stund till pastan sugit in och torkat, och upprepar sedan behandlingen. Vänta några minuter innan påklädning. Pastan är basisk och kan svida på nyrakad hud.
                 <br>Deodoranten är självkonserverande och inga konserveringsmedel eller andra kemikalier som inte befrämjar deodorantens funktion är tillsatta.</p>
-                <p><strong>Dr Hardmans liknande produkter:</strong>
-                    <br><a href="/lipbalm">No 70 Vanilla-Choko Lip Balm</a>
+                <h4>Dr Hardmans liknande produkter:</h4>
+                    <p><a href="/lipbalm">No 70 Vanilla-Choko Lip Balm</a>
                     <br><a href="/lipbalmvitamin">No 71 Vitamin Lip Balm</a>
                     <br><a href="/pawsandclawsraw">No 47 Paws and Claws hand- och fotkräm utan dofttillsatser</a>
                     <br><a href="/pawsandclawslavender">No 48 Paws and Claws hand och fotkräm med doft av lavendel och ylang ylang</a>
