alla bodybutter-sidor fixade

--- a/mangobodybutter.html
+++ b/mangobodybutter.html
@@ -10,8 +10,7 @@ id: page-25
     <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-4 offset-lg-1">
-                <img class="img-fluid mx-auto produktprofilbild" src="/img/DrHardmans_No25_Mango_Body_Butter.png" alt="Dr Hardman's No.25 Mango Body Butter">
-            </div>
+                </div>
             <div class="col-lg-6">
                 <h1 class="pt-3">No 25 Mango Body Butter</h1>
                 <h3>Gudomlig tropisk fuktgivare med mangosmör och aloe vera.<br>Vispat body butter i burk med skruvlock, 160ml.</h3>
@@ -68,13 +67,8 @@ id: page-25
             <div class="col-lg-6">
                 <h1>Om denhär produkten:</h1>
                 <hr class="primary" />
-                <p>Mangosmör är oerhört återfuktande, fungerar exemplariskt på torr hud, på problemområden som torra knän och armbågar. Har naturligt UV skydd, stöder hudens flexibilitet samt verkar skyddande för åldrande hudceller.
-                    <br>Dr Hardman's Mango Body Butter är den mest (väl)doftande dagliga fuktgivaren i vårt sortiment som alla älskar och ingen kan sluta använda då de en gång börjat! <br>De som gillar goda dofter men hellre doftar blomma än frukt skall pröva <a href="/rosebodybutter">No. 26 Rose Body Butter</a>.</p>
-                <p><strong>Dr Hardmans liknande produkter:</strong>
-                    <br><a href="/sheabodybutter">No 22 Calming Shea Body Butter</a>
-                    <br><a href="/citrusbodybutter">No 23 Citrus Body Butter</a>
-                    <br><a href="/cocoabodybutter">No 24 Cocoa Body Butter</a>
-                    <br><a href="/rosebodybutter">No 26 Rose Body Butter</a></p>
+                <p><p><strong>Dr Hardmans liknande produkter:</strong>
+                    <br></p>
                 </p>
                 <div
                         class="fb-like"
