--- a/rosebodybutter.html
+++ b/rosebodybutter.html
@@ -73,9 +73,9 @@ id: page-26
                     <br>Förutom det genomgoda sheasmöret innehåller Rose Body Butter liksom <a href="/mangobodybutter">No 25 Mango Body Butter</a> mangosmör som är oerhört återfuktande, fungerar exemplariskt på torr hud och på problemområden som torra knän och armbågar. Har naturligt UV skydd, stöder hudens flexibilitet samt verkar skyddande för åldrande hudceller.
                     <br>Eteriska oljor från ros och pelargon är antimikrobiella, motverkar acne, minskar symptom av rosacea, samt hjälper de andra ingredienserna i kroppssmöret att tränga djupt in i huden. Eterisk olja från rosmarin lindrar muskel- och ledvärk, har avslappnande inverkan och positiv inverkan på minnesfunktionerna.</p>
                 <p><strong>Dr Hardmans liknande produkter:</strong>
-                    <br><a href="/sheabodybutter">No 22 Calming Shea Body Butter</a>
-                    <br><a href="/citrusbodybutter">No 23 Citrus Body Butter</a>
-                    <br><a href="/cocoabodybutter">No 24 Cocoa Body Butter</a>
+                    <br><a href="/no22-calmingsheabodybutter">No 22 Calming Shea Body Butter</a>
+                    <br><a href="/no23-citrusbodybutter">No 23 Citrus Body Butter</a>
+                    <br><a href="/no24-cocoabodybutter">No 24 Cocoa Body Butter</a>
                     <br><a href="/mangobodybutter">No 25 Mango Body Butter</a></p>
                 </p>
                 <div
