--- a/youthfulglow.html
+++ b/youthfulglow.html
@@ -3,89 +3,63 @@ layout: page
 type: produkter
 title: Youthful Glow Face Oil
 comments: true
+id: page-31
 ---
+<section class="dubbelpadding sloganbox" id="sloganbox10">
+    <h1 class="slogan text-center">Swim with me! <br> I feel like a dip in the sea.</h1>
 
-<section class="padding">
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-4 offset-lg-1">
-                <img class="img-fluid mx-auto produktprofilbild" src="/img/youthful_bild31.jpg" alt="drhardman youthful glow face oil">
-            </div>
-            <div class="col-lg-6">
-                <h1 class="pt-3">No 31 Youthful Glow face oil</h1>
-                <h3>Lätt och silkeslent ansiktsoljeserum rikt på antioxidanter för alla hudtyper.<br>Droppflaska, 30ml.</h3>
-                <h1 class="pris">25,00 €</h1>
-                <p class="small">* Rekopris. I Sverige 240 kr.</p>
-            </div>
-        </div>
-    </div>
 </section>
+<article class="padding grey">
+    <header><h1>No 31 Youthful Glow face oil</h1></header>
+    <p>Lätt och silkeslent ansiktsoljeserum rikt på antioxidanter för alla hudtyper.<br>Droppflaska, 30ml.</p>
+    <h2 class="pris">25,00 €</h2>
+    <p class="small">* Rekopris. I Sverige 240 kr.</p>
+    <figure>
+        <img class="img-fluid mx-auto produktprofilbild" src="/img/youthful_bild31.jpg" alt="drhardman youthful glow face oil">
+    </figure>
 
-<section class="light-bg">
-    <div class="texture-border-top">
-    </div>
-    <div class="container pt-5 pb-4">
-        <div class="row">
+    <h2 class="faktarutarubrik">Snabb&shy;fakta</h2>
 
-            <div class="col-lg-4 offset-lg-1 pb-3">
-                <div class="faktaruta">
-                    <h1 class="faktarutarubrik">Snabb&shy;fakta</h1>
+    <h3>STÖDER</h3>
+    <ul class="ingredienslista">
+        <li>Hudcellernas normala återbildning</li>
+        <li>Sebumproduktion</li>
+        <li>Balanserar blandhy</li>
+        <li>Rik på antioxidanter</li>
+        <li>Stöder skadad hy</li>
+        <li>Skyddar mot omgivningens påfrestningar</li>
+        <li>Antiseptiska egenskaper</li>
+        <li>Lugnar och helar</li>
+        <li>VEGAN</li>
+    </ul>
 
-                    <h4>STÖDER:</h4>
-                    <ul class="ingredienslista">
-                        <li>Hudcellernas normala återbildning</li>
-                        <li>Sebumproduktion</li>
-                        <li>Balanserar blandhy</li>
-                        <li>Rik på antioxidanter</li>
-                        <li>Stöder skadad hy</li>
-                        <li>Skyddar mot omgivningens påfrestningar</li>
-                        <li>Antiseptiska egenskaper</li>
-                        <li>Lugnar och helar</li>
-                        <li>VEGAN</li>
+    <h3>INGREDIENSER</h3>
+    <p class="ingredienser">
+    persikokärneolja
+    macadamia nötolja°
+    granatäppelolja°
+    jojobaolja°
+    extrakt av grönt te°
+    hallonkärneolja°
+    nyponolja°
+    rosmarin bladextrakt°
+    ylang ylang eterisk olja°
+        vitamin E</p>
 
-                    </ul>
-                    <h4>INGREDIENSER:</h4>
-                    <p>
-                        <a href="/ingredienser">persikokärneolja</a>
-                        <a href="/ingredienser">macadamia nötolja°</a>
-                        <a href="/ingredienser">granatäppelolja°</a>
-                        <a href="/ingredienser">jojobaolja°</a>
-                        <a href="/ingredienser">extrakt av grönt te°</a>
-                        <a href="/ingredienser">hallonkärneolja°</a>
-                        <a href="/ingredienser">nyponolja°</a>
-                        <a href="/ingredienser">rosmarin bladextrakt°</a>
-                        <a href="/ingredienser">ylang ylang eterisk olja°</a>
-                        <a href="/ingredienser">vitamin E</a>
-                    </p>
+    <p class="small">° Ekologisk
+        <br>* Rättvis handel
+        <br><sup>◆</sup> Oraffinerad (raw) råvara
+    </p>
 
-                    <p>° Ekologisk
-                        <br>* Rättvis handel
-                        <br><sup>◆</sup> Oraffinerad (raw) råvara
-                    </p>
 
-                </div>
-            </div>
-
-            <div class="col-lg-6">
-                <h1>Om denhär produkten:</h1>
-                <hr class="primary" />
-                <p>Dr Hardmans Youthful Glow Face Oil är ingen vanlig hudolja utan ett koncentrerat olje-serum. Passar alla hudtyper och ger trött och skadad hy tillbaka sin ungdomliga lyster.</p>
-                <p>Våra ansiktsoljeserum skapades för att ge näring åt huden samtidigt som de motverkar specifika problem. Dessa vegetabiliska serum är sammansatta av oljor och organiska botaniska extrakt av högsta kvalitet. Serumet ger huden en kraftfull dos av näringsämnen och vitaminer och doftar ljuvligt gott.
-                    <br>Applicera på rengjort ansikte och hals morgon och kväll, eller vid behov.</p>
-                <p>Läs mer om fytoaromatiska ansiktsoljor på sidan <a href="/braattveta#phytoboosters">bra att veta: fytoaromatiska oljor.</a></p>
-                <p><strong>Dr Hardmans liknande produkter:</strong>
-                    <br><a href="/clarified">No 30 Clarified</a>
-                    <br><a href="/serendipity">No 32 Serendipity</a>
-                    </p>
-                <div
-                        class="fb-like"
-                        data-share="true"
-                        data-width="450"
-                        data-show-faces="true">
-                </div>
-                <a class="up pull-right" href="#page-top"><i class="fa fa-angle-double-up" aria-hidden="true"></i> Upp</a>
-            </div>
-        </div>
-    </div>
-    <div class="texture-border-bottom"></div>
-</section>
+    <h2 class="om">Om denhär produkten</h2>
+    <hr class="primary"/>
+    <p>Dr Hardmans Youthful Glow Face Oil är ingen vanlig hudolja utan ett koncentrerat olje-serum. Passar alla hudtyper och ger trött och skadad hy tillbaka sin ungdomliga lyster.</p>
+    <p>Våra ansiktsoljeserum skapades för att ge näring åt huden samtidigt som de motverkar specifika problem. Dessa vegetabiliska serum är sammansatta av oljor och organiska botaniska extrakt av högsta kvalitet. Serumet ger huden en kraftfull dos av näringsämnen och vitaminer och doftar ljuvligt gott.
+        <br>Applicera på rengjort ansikte och hals morgon och kväll, eller vid behov.</p>
+    <p>Läs mer om fytoaromatiska ansiktsoljor på sidan <a href="/braattveta#phytoboosters">bra att veta: fytoaromatiska oljor.</a></p>
+    <p>&nbsp;</p>
+    <h4>DR HARDMANS LIKNANDE PRODUKTER</h4>
+        <p><a href="/clarified">No 30 Clarified</a>
+        <br><a href="/serendipity">No 32 Serendipity</a>
+    </p>
