--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ id: page-1
 <a name="page-top" id="page-top"></a>
 
 <section class="dubbelpadding sloganbox" id="sloganboxindex">
-    <h1 class="slogan text-center">Huden är ditt största organ<br>skäm bort och skydda den</h1>
+    <h1 class="slogan text-center">Clean food for healthy skin.<br>No extras, just the good stuff :)</h1>
 </section>
 
 <a name="jumtarget" id="page-produkter"></a>
@@ -33,7 +33,7 @@ id: page-1
                     <p>Calming Shea<br>Body Butter</p>
             </div>
             <div class="flip-card-back">
-                <a href="/sheabodybutter">
+                <a href=" /no22-calmingsheabodybutter">
                     <img class="img-fluid" src="/img/DrHardmans_No22_Calming_Shea_Butter.png" alt="Dr Hardman No.22 Calming Shea Body Butter" />
                 </a>
                 
@@ -47,7 +47,7 @@ id: page-1
                 <p>Citrus<br>Body Butter</p>
             </div>
             <div class="flip-card-back">
-                <a href="/citrusbodybutter">
+                <a href="/no23-citrusbodybutter">
                     <img  class="img-fluid" src="/img/Burk_citrus500.png" alt="Dr Hardman No.23 citrus body butter">
                 </a>
             </div>
@@ -60,7 +60,7 @@ id: page-1
                 <p>Choko<br>Body Butter</p>
             </div>
             <div class="flip-card-back">
-                <a href="/cocoabodybutter">
+                <a href="/no24-cocoabodybutter">
                     <img class="img-fluid mx-auto pb-3" src="/img/DrHardmans_No24_Cocoa_Body_Butter.png" alt="Dr Hardman No.24 cocoa body butter">
                 </a>
             </div>
@@ -341,9 +341,9 @@ id: page-1
 
                         <h1>Till FÖRSÄLJNING FRE 16.3:</h1>
                         <p><a href="/pitstopregular">DrH <strong>no.10</strong> PIT STOP naturlig deodorant</a>
-                            <br><a href="/sheabodybutter">DrH <strong>no.22</strong> CALMING SHEA BODY BUTTER</a>
-                            <br><a href="/citrusbodybutter">DrH <strong>no.23</strong> CITRUS BODY BUTTER</a>
-                            <br><a href="/cocoabodybutter">DrH <strong>no.24</strong> COCOA BODY BUTTER</a>
+                            <br><a href=" /no22-calmingsheabodybutter">DrH <strong>no.22</strong> CALMING SHEA BODY BUTTER</a>
+                            <br><a href="/no23-citrusbodybutter">DrH <strong>no.23</strong> CITRUS BODY BUTTER</a>
+                            <br><a href="/no24-cocoabodybutter">DrH <strong>no.24</strong> COCOA BODY BUTTER</a>
                             <br><a href="/mangobodybutter">DrH <strong>no.25</strong> MANGO BODY BUTTER</a>
                             <br><a href="/rosebodybutter">DrH <strong>no.26</strong> ROSE BODY BUTTER</a>
                             <!--<br><a href="/clarified">DrH <strong>no.30</strong> CLARIFIED ansiktsolja</a>-->
