--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ id: page-1
                 <p>Pit Stop Regular<br>Deodorant</p>
             </div>
             <div class="flip-card-back">
-                <a href="pitstopregular.html">
+                <a href="pitstopregular">
                     <img class="img-fluid" src="img/DrHardmansPitStop.png" alt="Dr Hardman No.10 pit stop natural deodorant" />
                 </a>
             </div>
